Tried to fix overflow with tasks

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -250,3 +250,7 @@ h2{
   /* margin-top:4%; */
   margin:10%;
 }
+
+#tasks {
+  overflow:auto;
+}
